fixed tokenizer to be up to date with 1.8